# cefr-text-difficulty-0907-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
datasets/kaggle_cefr_texts/: DOWNLOAD_INSTRUCTIONS.txt
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: code_repositories_survey.json
papers/: README.md
papers/pages/: arase2022_cefr_sp_manifest.txt  arnold2018_cefr_metrics_manifest.txt  francois2009_ffl_readability_manifest.txt  fujinuma2021_joint_readability_manifest.txt  imperial2025_universalcefr_manifest.txt  khallaf2021_arabic_cefr_manifest.txt  naous2023_readme_plus_manifest.txt  pilan2016_readable_read_manifest.txt  pitler2008_readability_manifest.txt  vajjala2012_sla_readability_manifest.txt  vajjala2018_universal_cefr_manifest.txt  xia2016_readability_l2_manifest.txt
results/: experiment_results.json  feature_correlations.csv  feature_groups.json  feature_importance.csv
src/: config.py  data_loader.py  feature_extraction.py  run_experiments.py
